reading-room UI

--- a/reading-the-room/src/App.css
+++ b/reading-the-room/src/App.css
@@ -1,39 +1,29 @@
-.App {
-  text-align: center;
+.reading-room {
+position: absolute;
+height: 69px;
+width: 370px;
+left: 263px;
+top: 46px;
+border-radius: nullpx;
+font-family: Baloo;
+font-style: normal;
+font-weight: normal;
+font-size: 44px;
+line-height: 69px;
+color: #000000;
+}
+.reading-room-screen {
+position: absolute;
+width: 455px;
+height: 99px;
+left: 228px;
+top: 181px;
+font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 26px;
+line-height: 30px;
+text-align: center;
+color: #000000;
 }
 
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
