game route error

--- a/client/src/originalCopy/App.css
+++ b/client/src/originalCopy/App.css
@@ -1,3 +1,55 @@
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+© 2021 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+
+
 /* readingtheroom screen */
 .gameIntroTitle {
   position: absolute;
@@ -54,6 +106,8 @@
   left: 426px;
   top: 346px;
   border-radius: 0px;
+  cursor: pointer;
+  text-align: center;
 }
 #ellipseLight {
   position: absolute;
@@ -62,6 +116,8 @@
   left: 31px;
   top: 0px;
   border-radius: 10px;
+  cursor: pointer;
+  text-align: center;
 
   background: #ececec;
 }
