modified styles for alignments

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,8 +8,8 @@ Variables
   /* dark shades of primary color*/
   --clr-continue: #ffbd59;
   --clr-main: #9cc8cd;
-  --clr-try: #7fca60;
-  --clr-play: #ff66c1;
+  --clr-try: #ff66c1;
+  --clr-play: #7fca60;
 
   --ff-primary: "Roboto", sans-serif;
   --ff-secondary: "Open Sans", sans-serif;
